[package]
name = "cldb"
version = "0.1.0"
authors = ["Samuele0 <samuele0@tutanota.com>"]
edition = "2018"
build = "./src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ethca = { git = "https://github.com/Samuele0/contract_analyzer" }
json = ""
ructe = ""
ethereum-types = ""
[build-dependencies]
ructe = ""
